--- a/libxfs/Makefile
+++ b/libxfs/Makefile
@@ -135,6 +135,10 @@ ifeq ($(HAVE_MEMFD_CREATE),yes)
 LCFLAGS += -DHAVE_MEMFD_CREATE
 endif
 
+ifeq ($(HAVE_GETRANDOM_NONBLOCK),yes)
+LCFLAGS += -DHAVE_GETRANDOM_NONBLOCK
+endif
+
 FCFLAGS = -I.
 
 LTLIBS = $(LIBPTHREAD) $(LIBRT)
