xfs_protofile: fix mode formatting error
The protofile parser expects the mode to be specified with three octal
digits.  Unfortunately, the generator doesn't get that right if the mode
doesn't have any of bits 8-11 (aka no owner access privileges) set.

Fixes: 6aace700b7b82d ("mkfs: add a utility to generate protofiles")
Signed-off-by: Darrick J. Wong <djwong@kernel.org>
Reviewed-by: Christoph Hellwig <hch@lst.de>

--- a/mkfs/xfs_protofile.in
+++ b/mkfs/xfs_protofile.in
@@ -45,7 +45,7 @@ def stat_to_str(statbuf):
 
 	perms = stat.S_IMODE(statbuf.st_mode)
 
-	return '%s%s%s%o %d %d' % (type, suid, sgid, perms, statbuf.st_uid, \
+	return '%s%s%s%03o %d %d' % (type, suid, sgid, perms, statbuf.st_uid, \
 			statbuf.st_gid)
 
 def stat_to_extra(statbuf, fullpath):
