Makefile: inject package name/version/bugreport into pot file
Inject the package name and version ("xfsprogs") and the bug reporting
URL into the generated gettext .pot file.  This isn't strictly
necessary, it's more just polish.

Signed-off-by: Darrick J. Wong <djwong@kernel.org>
Reviewed-by: Andrey Albershteyn <aalbersh@kernel.org>
Reviewed-by: Bill O'Donnell <bodonnel@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -4,6 +4,7 @@ AC_CONFIG_AUX_DIR([.])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR([include/libxfs.h])
 AC_PREFIX_DEFAULT(/usr)
+AC_SUBST(PACKAGE_BUGREPORT)
 
 # Default CFLAGS if nobody specifies anything else
 if test "${CFLAGS+set}" != "set"; then
